# c-server-sdk

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Makefile  README.md  annotated.html  annotated_dup.js  api_8h.html  api_8h.js  api_8h__incl.dot  api_8h__incl.map  api_8h__incl.md5  api_8h_source.html  azure-pipelines.yml  boolean_8h.html  boolean_8h__dep__incl.dot  boolean_8h__dep__incl.md5  boolean_8h_source.html  classes.html  classlaunchdarkly_1_1Array.html  classlaunchdarkly_1_1Object.html  classlaunchdarkly_1_1Value.html  client_8h.html  client_8h.js  client_8h__dep__incl.dot  client_8h__dep__incl.map  client_8h__dep__incl.md5  client_8h__incl.dot  client_8h__incl.map  client_8h__incl.md5  client_8h_source.html  config_8h.html  config_8h.js  config_8h__dep__incl.dot  config_8h__dep__incl.map  config_8h__dep__incl.md5  config_8h__incl.dot  config_8h__incl.map  (+152 more)
.circleci/: config.yml
.ldrelease/: build.ps1  build.sh  config.yml  helpers.psm1  linux-publish.sh  mac-prepare.sh  mac-publish.sh  publish.ps1  publish.sh  test.ps1  test.sh
c-sdk-common/: README.md
c-sdk-common/include/launchdarkly/: json.h  logging.h  user.h
c-sdk-common/src/: concurrency.c  concurrency.h  json.c  ldvalue.c  ldvalue.h  memory.c  sse.c  sse.h  utility.c  utility.h
c-sdk-common/tests/: CMakeLists.txt  test-ldvalue.cpp
cmake/: README.md  hexify.cmake  json.cmake  ldserverapiConfig.cmake  semver.cmake  sha1.cmake  timestamp.cmake  uthash.cmake
contract-tests/: CMakeLists.txt  README.md  main.cpp
contract-tests/include/definitions/: definitions.hpp
contract-tests/include/helpers/: http_helpers.hpp
contract-tests/lib/embedded/: CMakeLists.txt
contract-tests/lib/internal/: CMakeLists.txt
contract-tests/lib/internal/include/definitions/: definitions.hpp
contract-tests/lib/internal/include/service/: client_entity.hpp
contract-tests/lib/internal/src/: client_entity.cpp  http_helpers.cpp  service.cpp
contract-tests/src/: client_entity.cpp
docs/: mainpage.md
include/: ldapi.h  ldclient.h  ldconfig.h  ldevaluate.h  ldevents.h  ldexport.h  ldinternal.h  ldjson.h  ldlogging.h  ldmemory.h  ldnetwork.h  ldoperators.h  ldschema.h  ldstore.h  ldstreaming.h  lduser.h  ldvariations.h
include/launchdarkly/: api.h  client.h  config.h  data_source.h  export.h  flag_state.h  json.h  logging.h  memory.h  store.h  user.h  variations.h
include/launchdarkly/integrations/: file_data.h  test_data.h
patches/: hexify.patch  semver.patch  sha1.patch  timestamp.patch
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  (+35 more)
src/: all_flags_state.c  all_flags_state.h  assertion.h  client.c  client.h  concurrency.c  concurrency.h  config.c  config.h  data_source.h  evaluate.c  evaluate.h  event_processor.c  event_processor.h  event_processor_internal.h  events.c  events.h  flag_model.c  flag_model.h  flag_state.c  json.c  json_internal_helpers.c  json_internal_helpers.h  ldclient.c  ldconfig.c  ldevaluate.c  ldevents.c  ldjson.c  ldlog.c  ldmemory.c  ldnet.c  ldnode.c  ldoperator.c  ldplatform.c  ldpolling.c  ldschema.c  ldstore.c  ldstreaming.c  lduser.c  ldutility.c  (+29 more)
src/integrations/: file_data.c  file_data.h  test_data.c  test_data.h
src/store/: caching_wrapper.c  caching_wrapper.h  internal_store.h  ldjsonrc.c  ldjsonrc.h  memory_cache.c  memory_cache.h  memory_store.c  memory_store.h  persistent_store_collection.c  persistent_store_collection.h  store_utilities.c  store_utilities.h
stores/redis/: CMakeLists.txt  test-redis.c
stores/redis/include/launchdarkly/store/: redis.h
stores/redis/src/: redis.c  redis.h
test-utils/include/test-utils/: client.h  flags.h  http_server.h  store.h  user.h
test-utils/src/: client.c  flags.c  store.c
tests/: CMakeLists.txt  commonfixture.cpp  concurrencyfixture.h  test-allflags.c  test-allflags.cpp  test-allflagsstate.cpp  test-client.cpp  test-config.c  test-config.cpp  test-eval.c  test-eval.cpp  test-event-processor.c  test-event-processor.cpp  test-events.c  test-events.cpp  test-file-data.cpp  test-flagmodel.cpp  test-json.c  test-json.cpp  test-lru.c  test-lru.cpp  test-misc.c  test-misc.cpp  test-mock.c  test-mock.cpp  test-node.c  test-offline.c  test-offline.cpp  test-operators.c  test-operators.cpp  test-persistent_store_collection.cpp  test-platform.c  test-segments.c  test-segments.cpp  test-store-backend.c  test-store-backend.cpp  test-store-memory.c  test-store.c  test-stores.cpp  test-streaming.c  (+9 more)
tests/cmake_projects/: CMakeLists.txt  DeclareProjectTest.cmake  README.md
tests/cmake_projects/add_subdirectory/: CMakeLists.txt
tests/cmake_projects/add_subdirectory/project/: main.c
tests/cmake_projects/find_package/: CMakeLists.txt
tests/cmake_projects/find_package/project/: CMakeLists.txt
tests/cmake_projects/find_package_compatible_version/: CMakeLists.txt
tests/cmake_projects/find_package_compatible_version/project/: CMakeLists.txt
tests/cmake_projects/find_package_incompatible_version/: CMakeLists.txt
tests/cmake_projects/find_package_incompatible_version/project/: CMakeLists.txt
tests/cmake_projects/test_add_subdirectory/project/: CMakeLists.txt
tests/cmake_projects/test_find_package_compatible_version/: CMakeLists.txt
tests/cmake_projects/test_find_package_cpp/: CMakeLists.txt
tests/cmake_projects/test_find_package_cpp/project/: CMakeLists.txt  main.cpp
tests/cmake_projects/test_find_package_incompatible_version/: CMakeLists.txt
tests/datafiles/: flag-with-duplicate-key.json  flag-with-segment-rule.json  persistent-store-init.json
